# libSGM

sample/movie/: CMakeLists.txt  cuda_gl.cu  demo.cpp  demo.h  renderer.cpp  renderer.h  stereosgm_movie.cpp
src/: CMakeLists.txt  check_consistency.cu  internal.h  median_filter.cu  scan_scost.cu  stereo_sgm.cpp  winner_takes_all.cu
